UNIX Systems support
Makefile tells GCC to link some libraries if needed. Also some
Windows-dependent libraries are replaced with common ones.

--- a/Bank/Makefile
+++ b/Bank/Makefile
@@ -1,2 +1,7 @@
-bank: main.c sqlite3.c Tests.c Database.c Dialog.c
-	gcc -o bank main.c sqlite3.c Tests.c Database.c Dialog.c -std=c99 -w
+ifndef SystemRoot
+    LIBS = -w -pthread -ldl
+endif
+
+bank: main.c sqlite3.c Database.c Dialog.c
+	gcc -o bank main.c sqlite3.c Database.c Dialog.c -std=c99 $(LIBS)
+
